# gpxlist

./: .editorconfig  .gitignore  ChangeLog.rst  README.rst  gpxlist.py  pyproject.toml
tests/: test_gpxlist.py  tondon.gpx
